// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useCollectionList > should fetch collections successfully 1`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "bannerUrl": "https://example.com/market-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 1,
    "contractType": "ERC721",
    "createdAt": "2025-03-16T13:04:16.098Z",
    "currencyOptions": [
      "0x0000000000000000000000000000000000000000",
      "0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48",
    ],
    "deployed": true,
    "destinationMarketplace": "sequence_marketplace_v2",
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "feePercentage": 3.5,
    "filterSettings": {
      "exclusions": [
        {
          "condition": "SPECIFIC_VALUE",
          "key": "Type",
          "value": "Sample",
        },
      ],
      "filterOrder": [
        "Type",
        "Rarity",
      ],
    },
    "id": 1,
    "itemsAddress": "0x0000000000000000000000000000000000000000",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "market",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
  {
    "address": "0x1234567890123456789012345678901234567890",
    "bannerUrl": "https://example.com/collection-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 137,
    "contractType": "ERC1155",
    "createdAt": "2025-03-16T13:04:16.098Z",
    "currencyOptions": [
      "0x0000000000000000000000000000000000000000",
    ],
    "deployed": true,
    "destinationMarketplace": "opensea",
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "feePercentage": 2.5,
    "filterSettings": {
      "exclusions": [
        {
          "condition": "ENTIRE_KEY",
          "key": "Category",
        },
        {
          "condition": "SPECIFIC_VALUE",
          "key": "Level",
          "value": "Legendary",
        },
      ],
      "filterOrder": [
        "Category",
        "Level",
        "Element",
      ],
    },
    "id": 2,
    "itemsAddress": "0x1234567890123456789012345678901234567890",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "market",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
  {
    "address": "0x0000000000000000000000000000000000000000",
    "bannerUrl": "https://example.com/shop-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 1,
    "createdAt": "2025-03-16T13:04:16.098Z",
    "customTokenIds": [],
    "deployed": true,
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "id": 1,
    "itemsAddress": "0x0000000000000000000000000000000000000000",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "shop",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "saleAddress": "0x0000000000000000000000000000000000000000",
    "saleBannerUrl": "https://example.com/shop-sale-banner.png",
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "tokenIds": [
      1n,
      2n,
      3n,
    ],
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
  {
    "address": "0x1234567890123456789012345678901234567890",
    "bannerUrl": "https://example.com/polygon-shop-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 137,
    "createdAt": "2025-03-16T13:04:16.098Z",
    "customTokenIds": [],
    "deployed": true,
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "id": 2,
    "itemsAddress": "0x1234567890123456789012345678901234567890",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "shop",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "saleAddress": "0x1234567890123456789012345678901234567890",
    "saleBannerUrl": "https://example.com/polygon-shop-sale-banner.png",
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "tokenIds": [
      4n,
      5n,
      6n,
    ],
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
]
`;

exports[`useCollectionList > should handle empty collections 1`] = `
[
  {
    "address": "0x0000000000000000000000000000000000000000",
    "bannerUrl": "https://example.com/shop-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 1,
    "createdAt": "2025-03-16T13:04:16.098Z",
    "customTokenIds": [],
    "deployed": true,
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "id": 1,
    "itemsAddress": "0x0000000000000000000000000000000000000000",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "shop",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "saleAddress": "0x0000000000000000000000000000000000000000",
    "saleBannerUrl": "https://example.com/shop-sale-banner.png",
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "tokenIds": [
      1n,
      2n,
      3n,
    ],
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
  {
    "address": "0x1234567890123456789012345678901234567890",
    "bannerUrl": "https://example.com/polygon-shop-banner.png",
    "bytecodeHash": "0x1234567890",
    "chainId": 137,
    "createdAt": "2025-03-16T13:04:16.098Z",
    "customTokenIds": [],
    "deployed": true,
    "extensions": {
      "blacklist": false,
      "categories": [
        "Mock",
      ],
      "description": "A mock collection for testing",
      "featureIndex": 0,
      "featured": true,
      "link": "https://example.com",
      "ogImage": "https://example.com/image.png",
      "ogName": "Mock Collection",
      "originAddress": "0x0000000000000000000000000000000000000000",
      "originChainId": 1,
      "verified": true,
      "verifiedBy": "0x",
    },
    "id": 2,
    "itemsAddress": "0x1234567890123456789012345678901234567890",
    "logoURI": "https://example.com/logo.png",
    "marketplaceCollectionType": "shop",
    "name": "Mock Collection",
    "private": false,
    "projectId": 1,
    "saleAddress": "0x1234567890123456789012345678901234567890",
    "saleBannerUrl": "https://example.com/polygon-shop-sale-banner.png",
    "source": "https://example.com/source",
    "status": "AVAILABLE",
    "symbol": "MOCK",
    "tokenIds": [
      4n,
      5n,
      6n,
    ],
    "type": "ERC721",
    "updatedAt": "2025-05-01T04:39:56.936Z",
  },
]
`;
